--- a/app/src/main/res/layout/calendar_view.xml
+++ b/app/src/main/res/layout/calendar_view.xml
@@ -27,7 +27,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="1dp"
             android:layout_marginEnd="1dp"
-            android:enabled="@{viewModel.listVisible}"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,16 +37,17 @@
             android:id="@+id/emptyList"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="#FFFFFF"
+            android:visibility="@{viewModel.listVisible}"
             android:gravity="center"
             android:text="@string/nothing_to_show"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:visibility="invisible"
             app:autoSizeTextType="none"
             app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
             app:layout_constraintEnd_toEndOf="@+id/recyclerView"
             app:layout_constraintStart_toStartOf="@+id/recyclerView"
             app:layout_constraintTop_toBottomOf="@+id/calendarView" />
-        <!--            android:enabled="@{!viewModel.listVisible}"-->
+
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/create_note"
