--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,6 +18,9 @@
             app:argType="string"
             app:nullable="true"
             android:defaultValue="@null" />
+        <action
+            android:id="@+id/action_calendarFragment_to_noteViewFragment"
+            app:destination="@id/noteViewFragment" />
     </fragment>
     <fragment
         android:id="@+id/noteWritingFragment"
@@ -26,6 +29,22 @@
         tools:layout="@layout/note_writing_layout">
         <action
             android:id="@+id/action_noteWritingFragment_to_calendarFragment"
-            app:destination="@id/calendarFragment" />
+            app:destination="@id/calendarFragment"
+            app:popUpTo="@id/calendarFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/noteViewFragment"
+        android:name="com.example.diary.NoteViewFragment"
+        android:label="NoteViewFragment">
+        <argument
+            android:name="noteToExpand"
+            app:argType="string"
+            app:nullable="false" />
+        <action
+            android:id="@+id/action_noteViewFragment_to_calendarFragment"
+            app:destination="@id/calendarFragment"
+            app:popUpTo="@id/calendarFragment"
+            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
